--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-1"></div>
   <div class="col-xs-7">
-    <h6 class="title"> {{title}}</h6>
+    <h6 class="view-title"> {{title}}</h6>
     <div class="view-sub-title">{{subTitle}} </div>
   </div>
   <div class="col-xs-4">
