--- a/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
+++ b/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
@@ -3,7 +3,7 @@
   (clrDgRefresh)="update($event)"
   class="datagrid-compact">
 
-  <clr-dg-placeholder>No {{ tabName }} Data</clr-dg-placeholder>
+  <clr-dg-placeholder>No {{ tabname }} Data</clr-dg-placeholder>
 
   <clr-dg-column *ngFor="let col of columns"
     [clrDgField]="col.notField ? null : col.name"
