--- a/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
+++ b/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
@@ -12,6 +12,7 @@
     </button>
     <clr-tab-content id="detail-{{ tab.name | lowercase }}-content" *clrIfActive>
       <app-detail-tab-table
+        [tabname]="tab.name"
         [columns]="tab.columns"
         [filterType]="tab.filterType"
         [reverseEnum]="tab.reverseEnum"
