--- a/ui/src/app/views/not-found/component.html
+++ b/ui/src/app/views/not-found/component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{notFoundMessage}} not found
-</h1>
+<div *ngIf="initialLoadFailure" style="margin-top: 0rem; padding-top: 1rem; padding-left: 1rem;">
+  <h1>{{initialLoadErrorHeader}}</h1>
+  <p>
+    Please try <a [href]="loc.path()">reloading</a>, or navigating to the <a href="/">home page</a>.
+  </p>
+</div>
