--- a/public-ui/src/styles.css
+++ b/public-ui/src/styles.css
@@ -49,7 +49,11 @@ a {
 }
 
 body {
-  background-color: #e2e3e5;
+  background-color: #E0E0E1;
+}
+
+.main-container {
+    background-color: #E0E0E1;
 }
 
 textarea {
