--- a/public-ui/src/app/styles/buttons.css
+++ b/public-ui/src/app/styles/buttons.css
@@ -1,10 +1,10 @@
 button {
-  font-family: GothamMedium;
   font-size: 12px;
+  font-weight: 100;
 }
 
 button.btn.btn-primary {
-  background-color: #262262;
+  background-color: #2F306F;
   border: none;
   padding: 0rem 0.77rem;
   border-radius: 0.3rem;
