--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -8,7 +8,8 @@
       <div class="view-sub-title">{{subTitle}} </div>
     </div>
     <div class="white-box" >
-      <div class="search-top form-group">
+      <div class="search-input-big">
+        <clr-icon shape="search" class="input-icon is-info"></clr-icon>
         <input type="text" id="search-db" placeholder="Keyword Search">
       </div>
 
