--- a/public-ui/src/app/views/surveys/surveys.component.html
+++ b/public-ui/src/app/views/surveys/surveys.component.html
@@ -1,8 +1,6 @@
 <div class="row">
 
-
-
-  <div class="col-xs-8">
+  <div class="col-sm-8 col-xs-12">
     <div class="page-header">
       <div class="view-title"> {{title}}</div>
       <div class="view-sub-title">{{subTitle}} </div>
@@ -20,7 +18,7 @@
 
       <div class="cards row">
         <!-- Show a card for each survey -->
-        <div class="col-xs-3">
+        <div class="col-xs-12 col-sm-3">
           <div class="card clickable">
             <div class="card-header">
               The Basics
@@ -36,7 +34,7 @@
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-12 col-sm-3">
           <div class="card clickable">
             <div class="card-header">
               The Basics
