--- a/public-ui/src/app/styles/cards.css
+++ b/public-ui/src/app/styles/cards.css
@@ -9,20 +9,22 @@
 
 .card-header {
     border-bottom: none;
-    color: #2F306F;
-    font-size: .75rem;
+    color: #302C71;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .card-title {
     font-weight: bold;
     letter-spacing: normal;
-    font-size: .55rem;
-    color: #2F306F;
+    font-size: 12px;
+    color: #302C71;
+    line-height: 14px;
 }
 
 .card-text {
-    color: #000;
-    font-size: .4rem;
-    font-weight: normal;
+    color: rgba(0,0,0,0.87);
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 16px;
 }
