--- a/public-ui/src/app/views/app/component.html
+++ b/public-ui/src/app/views/app/component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<clr-main-container>
   <app-db-header></app-db-header>
   <div class="content-container">
     <div class="content-area">
@@ -9,5 +9,5 @@
     </div>
     <app-routing-spinner></app-routing-spinner>
   </div>
-</div>
+</clr-main-container>
 
