--- a/public-ui/src/app/styles/page.css
+++ b/public-ui/src/app/styles/page.css
@@ -1,20 +1,30 @@
-
+.content-container {
+    font-family: "Gotham HTF", open-sans, sans-serif;
+}
 .page-header {
     margin-top: .5rem;
     margin-bottom: 1.5rem;
 }
+
+.title, .view-title, .box-title,  {
+    color: #302C71;
+}
+
 .view-title {
     font-size: 32px;
-    color: #2F306F;
     padding-top: 12px;
     padding-bottom:12px;
 
 }
 
-.view-sub-title {
+.view-sub-title, .box-sub-title {
     font-size: 14px;
-    color: #5A5A5A;
+    color: rgba(0,0,0,0.87);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
 }
+
 
 .white-box {
     padding: 1rem;
@@ -27,9 +37,9 @@
 }
 
 .box-title {
-    color: #2F306F;
     font-size: 20px;
 }
+
 .box-sub-title {
     font-size: 14px;
     color: #5A5A5A;
