--- a/public-ui/src/app/views/app/component.css
+++ b/public-ui/src/app/views/app/component.css
@@ -4,6 +4,23 @@
     padding-right: 3rem;
 }
 
+@media (max-width: 978px) {
+    .content-container {
+        padding:0;
+        margin:0;
+    }
+
+    body {
+        padding:0;
+    }
+
+    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom:0;
+    }
+}
+
 
 
 
