--- a/public-ui/src/app/views/db-header/db-header.component.html
+++ b/public-ui/src/app/views/db-header/db-header.component.html
@@ -1,11 +1,12 @@
-<header>
+<clr-header class="header db-header">
   <div class="branding">
-    <a class="logo" href="/"><img [src]="logo"/></a>
+    <a routerLink="/" class="nav-link logo"><img [src]="logo"></a>
   </div>
-  <div class="header-nav title"> <span class="title-data"> DATA </span> <span class="title-browser"> BROWSER </span></div>
-  <div class="header-nav menu flex-items-xs-right">
+
+  <div class="header-nav menu" [clr-nav-level]="2">
+    <a class="title nav-link nav-text" routerLink="/"> <span class="title-data"> DATA </span> &nbsp; <span class="title-browser"> BROWSER </span></a>
     <a class="nav-link nav-text" #home routerLinkActive="active" routerLink="/quick-search">Quick Guided Search</a>
     <a class="nav-link nav-text" routerLinkActive="active" routerLink="/surveys">Survey Instruments</a>
     <a class="nav-link nav-text" routerLinkActive="active" routerLink="/advanced-ehr">Advanced Electronic Health Record</a>
   </div>
-</header>
+</clr-header>
