Cursor pointer on remove icon

--- a/ui/src/app/views/profile-page/component.css
+++ b/ui/src/app/views/profile-page/component.css
@@ -27,6 +27,10 @@ label clr-icon {
   margin-left: 0.25rem;
 }
 
+clr-icon.remove-icon:hover {
+  cursor: pointer;
+}
+
 div.field {
   display: inline-block;
   margin-right: 2rem;
