--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -10,7 +10,7 @@
     <div class="form-section">
       <input type="text" class="long-input" id="contactEmail" name="contactemail" [(ngModel)]="profile.contactEmail" (ngModelChange)="contactEmailChanged()" placeholder="Email Address">
       <div *ngIf="contactEmailConflictError" class="error">
-        Contact Email is already taken.
+        Contact Email is already in use.
       </div>
     </div>
     <div class="form-section">
