get survey list on view

--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -2,8 +2,8 @@
 
   <div class="col-xs-12 col-sm-12 col-md-8">
     <div class="page-header">
-      <div class="view-title"> {{title}} {{domainId}}</div>
-      <div class="view-sub-title">{{subTitle}} </div>
+      <div class="view-title"> {{title}} {{survey.domainId}}</div>
+      <div class="view-sub-title">{{survey.domainDesc}} </div>
     </div>
   </div>
 </div>
