--- a/ui/src/app/cohort-search/cohort-search/cohort-search.component.html
+++ b/ui/src/app/cohort-search/cohort-search/cohort-search.component.html
@@ -25,8 +25,12 @@
     </div>
   </div>
 </div>
+<!--
 <app-criteria-wizard
   *ngIf="open$ | async"
   [open]="open$ | async"
   [criteriaType]="criteriaType$ | async">
 </app-criteria-wizard>
+-->
+<app-modal>
+</app-modal>
