Disable the button as well

--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -34,6 +34,7 @@
     <div class="form-section">
       <button type="submit"
           class="btn btn-primary short-button"
+          [disabled]="creatingAcccount"
           [clrLoading]="creatingAcccount">
         Next
       </button>
