--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -34,8 +34,8 @@
     <div class="form-section">
       <button type="submit"
           class="btn btn-primary short-button"
-          [disabled]="creatingAcccount"
-          [clrLoading]="creatingAcccount">
+          [disabled]="creatingAccount"
+          [clrLoading]="creatingAccount">
         Next
       </button>
     </div>
