RW-545 remove border from icon on profile page (#757)
* remove border from icon

* adding border for hover - to avoid floatiness

--- a/ui/src/app/views/profile-page/component.css
+++ b/ui/src/app/views/profile-page/component.css
@@ -107,6 +107,14 @@ button.btn.btn-link {
   font-size: 14px;
 }
 
+button.btn.btn-icon {
+  border: 0;
+}
+
+button.btn.btn-icon:hover {
+  border: 1px solid;
+}
+
 .alert-text-waiting {
   color: #E28327;
 }
