--- a/ui/src/app/cohort-search/tree-page/tree-page.component.css
+++ b/ui/src/app/cohort-search/tree-page/tree-page.component.css
@@ -1,42 +1,23 @@
 .page {
   height: 100%;
   display: flex;
-  flex-flow: column;
 }
 
-.main-panel {
-  width: 100%;
-  height: 70%;
+.tree-view {
+  min-width: 14rem;
+  flex: 1;
+}
+
+.node-list {
   overflow-y: auto;
   overflow-x: hidden;
-  flex: 7;
-  position: relative;
-}
-
-.selection {
   width: 100%;
-  height: 30%;
-  flex: 3;
-  max-width: inherit;
-  max-height: inherit;
-  box-sizing: border-box;
+  height: 100%;
 }
 
-@media all and (min-width: 1200px) {
-  .page {
-    flex-flow: row;
-  }
-  .main-panel {
-    width: 70%;
-    height: 100%;
-  }
-  .selection {
-    width: 30%;
-    height: 100%;
-  }
-}
-
-.selection-wrapper {
+.selected {
+  width: 14rem;
+  min-width: 14rem;
   border: 2px solid #d7d7d7;
   height: 100%;
   padding-left: 0.4rem;
@@ -49,3 +30,17 @@
   margin-top: 0;
 }
 
+@media all and (max-width: 900px) {
+  .page {
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  }
+  .selected {
+    flex: 1;
+    width: 100%;
+    min-height: 50%;
+  }
+  .tree-view {
+    min-height: 50%;
+  }
+}
